bug fix (collapse menu on button activation in narrow screen mode; portfolio item font size narrow screen)

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -812,6 +812,10 @@ background-color: var(--nav-color);
     margin-top: 2vw;
   }
 
+  .grid-h {
+    font-size: 13px;
+  }
+
   #grid-imageoverlay {
     width: 80vw;
     height: 80vh;
